welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: value <= is not a member of object Int
    if(Int<=5){
          ^alarmClock:11: error: value <= is not a member of object Int
    if(Int<=5){
          ^